Исправление пути и List.of